--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   "author": "saptarshi pujari",
   "license": "ISC",
   "dependencies": {
+    "amazon-cognito-identity-js": "^6.3.12",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.7",
+    "jwks-rsa": "^3.2.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "path": "^0.12.7",
+    "qs": "^6.14.0",
     "router": "^1.3.8",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
