--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "file-type": "^16.5.4",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.7",
@@ -32,6 +33,8 @@
     "router": "^1.3.8",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
+    "sharp": "^0.34.3",
+    "uuid": "^11.1.0",
     "window": "^4.2.7"
   }
 }
